[package]
name = "timer_ship"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A persistent timer utility with operation logging for failure recovery"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ompurwar/timer_ship"
keywords = ["timer", "persistence", "logging", "recovery"]
categories = ["asynchronous", "data-structures"]

[lib]
name = "timer_ship"
path = "src/lib.rs"

[[bin]]
name = "timer_ship"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Add test dependencies here if needed
